# batko-digital-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  NAHRAT_AUK019_OBA_GITHUB.bat  README.md  pyproject.toml
.devcontainer/: devcontainer.json
00_SYSTEM/: README.md  data-standard.md  migration-plan.md  repo-mapa.md  url-registr.md
10_CONTENT_ENGINE/: README.md
20260512 1240 ut auto1 NLM Metodika a příprava pro import vozidel/: 20260512 1240 ut auto1 00 JBL podklady firemní.docx.md  LANDING-PAGE-PLAYBOOK.md
20_AUTOMATION/: README.md  pipeline-plan.md
30_DATA/: README.md
40_OUTPUT/: README.md
50_ASSETS/: README.md
60_ARCHIVE/: README.md
90_LAB/: README.md
aukce_system/: SOP_AUKCE_SYSTEM.md  aukce_BROKER_TEMPLATE.html  aukce_CR_TRH_TEMPLATE.html  aukce_TEMPLATE.html  katalog.html  katalog_cz.html  katalog_eu.html
config/: selectors.yaml
docs/: AUKCE_VZOREK_PASSAT_VIP_DYNAMIC_ROI_20260614.html  MANUAL_FORENZNI_AUDIT_PRIRUCKA.md  MANUAL_KOMPLETNI_PROVOZ.md  PODMINKY_AUKCE_A_POTVRZENI.md  PROMPTY_FORENZNI_AUDIT_VOZU.md  SOP_OPENLANE_AUKCE_PAIR_FACTORY.md
github_repo/: README.md
landing_page/: index.html
lead_magnet_2026-05-18/: 01_SALES_LETTER_B2B.md  02_SALES_LETTER_B2C.md  landing_B2B.html  landing_B2C.html
nabidky/: buyer_registration.html  carcheck_landing.html  index.html  katalog.html
prompty/: Jerry_Jones_Protocol_v1.md  Persuasion_Power_Protocol_v1.md  ULTRA_ObjectionArchitect_JerryJones_FUSION_v1.md  index.md
scripts/: build_auk014_de.js  create_auk_015_kodiaq.py  create_openlane_auction_pair.py  extract_company_profile_docx.py
(+288 files in other folders)
