[project]
name = "batko-auto-v4"
version = "0.1.0"
description = "Foundation for BATKO_AUTO_V4"
requires-python = ">=3.12"
dependencies = [
  "loguru>=0.7",
  "playwright>=1.48",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --cov=src --cov-report=term-missing"
